--- a/SearchRecipes_Flask/templates/recipes_results.html
+++ b/SearchRecipes_Flask/templates/recipes_results.html
@@ -13,7 +13,10 @@
         </tr>
 
         {% for i in recipes %}
+         <tr>
+            <th>{{i["title"]}}</th><th>{{i["rating"]}}</th><th>{{i["views"]}}</th><th><img src="{{ i["thumbnail"] }}" width="500" height="600"></th><th><iframe src="https://www.youtube.com/embed/" + "{{ i["youTubeId"] }}" width="420" height="315" ></iframe></th>
 
+        </tr>
         {% endfor %}
 
 </table>
